--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -1,20 +1,23 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import Sidebar from '../components/Sidebar.astro';
-import Posts from '../components/Posts.astro';
-import PreloadFirstPostEyecatch from '../components/PreloadFirstPostEyecatch.astro';
-import GoogleResponsiveAd from '../components/GoogleResponsiveAd';
-import Pagination from '../components/Pagination.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import Sidebar from "../components/Sidebar.astro";
+import Posts from "../components/Posts.astro";
+import PreloadFirstPostEyecatch from "../components/PreloadFirstPostEyecatch.astro";
+import GoogleResponsiveAd from "../components/GoogleResponsiveAd";
+import Pagination from "../components/Pagination.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
 //microCMS呼び出し
 import { getBlogs } from "../library/microcms";
 // const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","eyecatch","category"] });
 
-export async function getStaticPaths({ paginate }:any) {
-  const { contents: posts } = await getBlogs({ fields: ["id", "title", "publishedAt","content","eyecatch","category"],orders:'-publishedAt'});
+export async function getStaticPaths({ paginate }: any) {
+  const { contents: posts } = await getBlogs({
+    fields: ["id", "title", "publishedAt", "content", "eyecatch", "category"],
+    orders: "-publishedAt",
+  });
   // 記事の配列から、1ページに10個づつ入るようにページを生成する
   return paginate(posts, { pageSize: 10 });
 }
@@ -24,43 +27,41 @@ const { page } = Astro.props;
 
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			ul {
-				list-style-type: none;
-				padding: unset;
-			}
-			ul li {
-				display: flex;
-			}
-			ul li time {
-				flex: 0 0 130px;
-				font-style: italic;
-				color: #595959;
-			}
-			ul li a:visited {
-				color: #8e32dc;
-			}
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <style>
+      ul {
+        list-style-type: none;
+        padding: unset;
+      }
+      ul li {
+        display: flex;
+      }
+      ul li time {
+        flex: 0 0 130px;
+        font-style: italic;
+        color: #595959;
+      }
+      ul li a:visited {
+        color: #8e32dc;
+      }
 
-			div a div {
-				margin:1em auto;
-			}
-		</style>
-		<PreloadFirstPostEyecatch posts={page.data}/>
-	</head>
-	<body>
-		<Header />
-		<main class="main">
-			<Sidebar></Sidebar>
-			<section class="contents">
-				<Posts posts={page.data}/>
-				<!-- {page.url.prev ? <a href={page.url.prev}>Previous</a> : page.url.current === '' ? null : <a href="/">Previous</a>} -->
-				<!-- {page.url.next ? <a href={page.url.next}>Next</a> : null} -->
-                <Pagination page={page}/>
-				<!-- <GoogleResponsiveAd client:only="preact"/> -->
-			</section>
-		</main>
-		<Footer />
-	</body>
+      div a div {
+        margin: 1em auto;
+      }
+    </style>
+    <PreloadFirstPostEyecatch posts={page.data} />
+  </head>
+  <body>
+    <Header />
+    <main class="main">
+      <Sidebar />
+      <section class="contents">
+        <Posts posts={page.data} />
+        <Pagination page={page} />
+        <!-- <GoogleResponsiveAd client:only="preact"/> -->
+      </section>
+    </main>
+    <Footer />
+  </body>
 </html>
