fixed BaseHead image

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -60,7 +60,7 @@ const {
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
-<meta property="og:image" content={`${image}?fm=webp&fit=crop&crop=top&w=720&h=360`} />
+<meta property="og:image" content={image} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
@@ -69,5 +69,5 @@ const {
 <meta property="twitter:description" content={description} />
 <meta
   property="twitter:image"
-  content={`${image}?fm=webp&fit=crop&crop=top&w=720&h=360`}
+  content={image}
 />
